Tabbed Application Mode improvements (4214)